--- a/config.yml
+++ b/config.yml
@@ -42,3 +42,18 @@ sep:
   vehicules_2020.csv: ';'
   vehicules_2021.csv: ';'
   vehicules_2022.csv: ';'
+
+encoding:
+  caracteristiques_2008.csv: 'ISO-8859-1'
+  caracteristiques_2018.csv: 'ISO-8859-1'
+  caracteristiques_2011.csv: 'ISO-8859-1'
+  caracteristiques_2005.csv: 'ISO-8859-1'
+  caracteristiques_2010.csv: 'ISO-8859-1'
+  caracteristiques_2006.csv: 'ISO-8859-1'
+  caracteristiques_2012.csv: 'ISO-8859-1'
+  caracteristiques_2013.csv: 'ISO-8859-1'
+  caracteristiques_2007.csv: 'ISO-8859-1'
+  caracteristiques_2017.csv: 'ISO-8859-1'
+  caracteristiques_2016.csv: 'ISO-8859-1'
+  caracteristiques_2014.csv: 'ISO-8859-1'
+  caracteristiques_2015.csv: 'ISO-8859-1'
